# nordpool-water-heater-scheduler

./: Cargo.toml  README.md  Settings.toml  display.xbm  response.json
src/: display.rs  main.rs  nordpool.rs  wall_socket.rs
src/display/: sprites.rs
