[package]
name = "nordpool-water-heater-scheduler"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
plotlib = "*"
tokio-cron-scheduler = "0.7"
rust-tuyapi = "0.8"
config = "0.13"
png = "0.17.5"
image = "0.24.3"
